--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -14,7 +14,7 @@
         </div>
         {% endif %}
 
-        <form method="POST" action="{{ url_for('admin_login') }}">
+        <form method="POST" action="/admin/login">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input
