--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -23,7 +23,7 @@
                     name="email"
                     required
                     autofocus
-                    placeholder="admin@harmoni.com"
+                    placeholder="admin@katbalance.com"
                     value="{{ email or '' }}"
                 >
             </div>
